# tui-textarea

./: Cargo.toml
bench/: Cargo.toml
bench/benches/: cursor.rs  delete.rs  insert.rs  search.rs
bench/src/: lib.rs
examples/: editor.rs  tuirs_editor.rs  tuirs_minimal.rs  tuirs_termion.rs
src/: highlight.rs  lib.rs  search.rs  textarea.rs  widget.rs
src/input/: mod.rs  termion.rs
