[package]
name = "tui-textarea"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
authors = ["rhysd <lin90162@yahoo.co.jp>"]
description = """
tui-textarea is a simple yet powerful text editor widget for ratatui and tui-rs. Multi-line
text editor can be easily put as part of your TUI application.
"""
license = "MIT"
homepage = "https://github.com/rhysd/tui-textarea#readme"
repository = "https://github.com/rhysd/tui-textarea"
readme = "README.md"
categories = ["text-editors", "text-processing"]
keywords = ["tui", "textarea", "editor", "input", "ratatui"]
include = ["/src", "/examples", "/tests", "/README.md", "/LICENSE.txt"]

[features]
default = ["crossterm"]
# Features to use ratatui
ratatui = ["dep:ratatui"]
crossterm = ["ratatui", "dep:crossterm", "ratatui/crossterm"]
termion = ["ratatui", "dep:termion", "ratatui/termion"]
termwiz = ["ratatui", "dep:termwiz", "ratatui/termwiz"]
no-backend = ["ratatui"]
# Features to use tui-rs
tuirs = ["dep:tui"]
tuirs-crossterm = ["tuirs", "tui/crossterm"]
tuirs-termion = ["tuirs", "tui/termion"]
tuirs-no-backend = ["tuirs"]
# Other optional features
search = ["dep:regex"]
serde = ["dep:serde"]
arbitrary = ["dep:arbitrary"]

[dependencies]
arbitrary = { workspace = true, features = ["derive"], optional = true }
crossterm = { workspace = true, optional = true }
ratatui = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
termion = { workspace = true, optional = true }
termwiz = { workspace = true, optional = true }
tui = { workspace = true, optional = true }
unicode-width = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[[example]]
name = "minimal"
required-features = ["crossterm"]

[[example]]
name = "editor"
required-features = ["crossterm", "search"]

[[example]]
name = "split"
required-features = ["crossterm"]

[[example]]
name = "single_line"
required-features = ["crossterm"]

[[example]]
name = "variable"
required-features = ["crossterm"]

[[example]]
name = "vim"
required-features = ["crossterm"]

[[example]]
name = "password"
required-features = ["crossterm"]

[[example]]
name = "popup_placeholder"
required-features = ["crossterm"]

[[example]]
name = "termwiz"
required-features = ["termwiz"]

[[example]]
name = "termion"
required-features = ["termion"]

[[example]]
name = "tuirs_minimal"
required-features = ["tuirs-crossterm"]

[[example]]
name = "tuirs_editor"
required-features = ["tuirs-crossterm", "search"]

[[example]]
name = "tuirs_termion"
required-features = ["tuirs-termion"]

[workspace]
members = ["bench"]

[workspace.package]
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
# Internal
tui-textarea = { path = ".", version = "0.7.0" }
# External
arbitrary = { version = "1", features = ["derive"] }
criterion = { version = "0.8" }
crossterm = { version = "0.29" }
rand = { version = "0.10.0" }
ratatui = { version = "0.30.0", default-features = false }
regex = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.149" }
termion = { version = "4.0" }
termwiz = { version = "0.23.3" }
tui = { version = "0.19", default-features = false }
unicode-width = { version = "0.2.2" }

[patch.crates-io]
crossterm = { git = "https://github.com/takumi-earth/crossterm.git" }
ratatui = { git = "https://github.com/takumi-earth/ratatui.git" }
rand = { git = "https://github.com/earthlings-dev/rand.git" }
rand_core = { git = "https://github.com/earthlings-dev/rand_core.git" }
getrandom = { git = "https://github.com/earthlings-dev/getrandom.git" }
serde = { git = "https://github.com/earthlings-dev/serde.git" }
serde_core = { git = "https://github.com/earthlings-dev/serde.git" }
serde_derive = { git = "https://github.com/earthlings-dev/serde.git" }
serde_json = { git = "https://github.com/earthlings-dev/json.git" }
anyhow = { git = "https://github.com/earthlings-dev/anyhow.git" }
clap = { git = "https://github.com/earthlings-dev/clap.git" }
clap_builder = { git = "https://github.com/earthlings-dev/clap.git" }
clap_lex = { git = "https://github.com/earthlings-dev/clap.git" }
semver = { git = "https://github.com/earthlings-dev/semver.git" }
thiserror = { git = "https://github.com/earthlings-dev/thiserror.git" }
thiserror-impl = { git = "https://github.com/earthlings-dev/thiserror.git" }

[profile.bench]
lto = "thin"

[dev-dependencies]
serde_json = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = ["search", "crossterm", "termwiz", "termion", "serde"]
rustdoc-args = ["--cfg", "docsrs"]
