[package]
name = "tui-textarea-bench"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false
license = "MIT"

[lib]
bench = false

[dependencies]
tui-textarea = { workspace = true, features = ["no-backend", "search"] }
ratatui = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "insert"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "cursor"
harness = false

[[bench]]
name = "delete"
harness = false
